Release v1.12.5: Fix Lightbox Z-Index Conflict

--- a/assets/css/mosaic-modal.css
+++ b/assets/css/mosaic-modal.css
@@ -10,7 +10,8 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 999999999999999999999999999;
+    z-index: 9900;
+    /* Lowered from maxint to allow Elementor Lightbox (9999) to overlap */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -261,4 +262,10 @@
 
 #loopmosaic-modal .gallery-columns-9 .gallery-item {
     width: 11.11%;
+}
+
+/* Fix Elementor Lightbox Z-Index */
+.elementor-lightbox {
+    z-index: 99999 !important;
+    /* Ensure it is above our modal (9900) */
 }
